fixed positioning of account links on mobile

--- a/src/components/accounts/accounts.scss
+++ b/src/components/accounts/accounts.scss
@@ -49,7 +49,7 @@
 
 @media screen and (max-width: 1000px) {
   .accounts-list {
-    bottom: 5%;
+    top: 92%;
     left: 0;
     right: 0;
     text-align: center;
